# ghost

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  AUDIT.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  REPLICATION_PACKAGE.md  REPRODUCE.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  release.yml
.streamlit/: config.toml
docs/: architecture.md  index.md
docs/adr/: 0000-vision.md  0001-hal-first.md  0002-deterministic-simulation.md  0003-telemetry-everywhere.md  0004-backend-independence.md  0005-canonical-vehicle-state.md  0006-event-driven-core.md  0007-hardware-migration-strategy.md  0008-perception-failure-modes.md  0009-autonomy-under-uncertainty.md  0010-revised-perception-mode-catalog.md  0011-t0-safety-vetoes-pilot.md  0012-run-retention-policy.md  0013-run-analysis-artifacts.md  0014-behavior-traceability-v1.md  0015-noisy-ground-truth-estimator.md  0016-belief-traceability-report-v1.md  0017-belief-consistency-analysis-v1.md  0018-comparative-belief-analysis.md  0019-belief-calibration-honesty-check-v1.md  0020-belief-self-assessment-v1.md  0021-belief-to-action-contract-layer-v1.md  0022-decision-trace-verification-v1.md  0023-action-emission-contract-layer-v1.md  0024-belief-forward-prediction-contract-v1.md  0025-prediction-observation-divergence-check-v1.md  0026-closed-loop-feedback-v1.md  0027-calibration-aware-decision-context-v1.md  0028-sensor-to-belief-fusion-contract-v1.md  0029-trajectory-controller-reference-v1.md  0030-replay-verification-v1.md  0031-bounded-action-under-drift-property-v1.md  0032-eventual-reactivation-under-recovery-property-v1.md  0033-monotonic-degradation-property-v1.md  0034-recovery-latency-bound-property-v1.md  0035-false-positive-bound-property-v1.md  0036-tla-plus-mechanical-verification-of-baud-erur.md  0037-real-ulog-ground-truth.md  0038-rlb-unbounded-verification.md  0039-false-positive-bound-property-v2.md  (+7 more)
docs/paper/: project_ghost_v0_2.md
docs/paper/arxiv/: README.md  main.tex  refs.bib
docs/paper/arxiv-short/: README.md  main.tex  refs.bib
docs/paper/data/: sample_ulog_demo.mcap
docs/paper/es/: README.md  proyecto_ghost_v0_2_ES.md
docs/paper/outputs/: benchmark_vs_rtamt.json  metrics.json  policy_comparison.json  violation_matrix.md  violation_showcase.json
docs/paper/scripts/: benchmark_vs_rtamt.py  build_replication_package.sh  compare_policies.py  measure_metrics.py  px4_ulog_adapter_skeleton.py  run_multi_ulog_corpus.py  run_rlb_tlc_sweep.py  verify_real_ulog.py  verify_real_ulog_discriminate.py
docs/paper/submission/: COVER_LETTER.md  COVER_LETTER_EN.md  COVER_LETTER_ES.md  SUBMISSION_CHECKLIST.md  VENUE_COMPARISON.md
docs/paper/tosem/: main.tex  refs.bib
docs/paper/venues/: README.md  dataset_integration.md  fmas2026.md  outreach_emails.md  rv2027.md
docs/paper/zh/: README.md  project_ghost_v0_2_ZH.md
docs/proofs/: BaudErur.cfg  BaudErur.tla  Fpb.cfg  Fpb.tla  README.md  Rlb.cfg  Rlb.tla  Rlb_W16.cfg  Rlb_W8.cfg  Rlb_unbounded.tla  Rlb_unbounded_handproof.md  TLAPS_roadmap.md
docs/proofs/Lean/: PartitionTheorem.lean  RlbUnbounded.lean  Sanity.lean
docs/properties/: baud.md  erur.md  fpb.md  index.md  md.md  proofs.md  rlb.md
docs/reviews/: architecture_red_team_review.md  uncertainty_red_team_review.md
docs/roadmaps/: phase1.md  research_track_uncertainty.md
docs/specs/: README.md  actuators.md  clock.md  events.md  hal.md  mission.md  perception.md  sensors.md  state.md  telemetry.md  uncertainty.md
scripts/: check_no_global_random.py  check_no_unstable_collections.py  check_paper_translations.py
src/project_ghost/: __init__.py  cli.py
src/project_ghost/actuators/: __init__.py
src/project_ghost/adapters/: __init__.py  (+4 more)
tests/: test_smoke.py
tests/adapters/: test_px4_ulog.py  test_px4_ulog_groundtruth.py  test_real_ulog_corpus.py  test_real_ulog_discrimination.py  test_real_ulog_smoke.py  test_real_ulog_smoke_gt_source.py
tests/analysis/: conftest.py  test_belief_consistency.py  test_belief_consistency_cli.py  test_belief_traceability.py  test_belief_traceability_cli.py  test_calibration.py  test_calibration_cli.py  test_cli.py  test_comparison.py  test_comparison_cli_build_manifest.py  test_comparison_cli_compare_belief.py  test_decision_trace.py  test_decision_trace_cli.py  test_determinism.py  test_integration.py  test_models.py  test_report.py  test_self_assessment_analysis.py  test_self_assessment_cli.py  test_summary.py
tests/core/: strategies.py  test_aging.py  test_composition.py  test_estimate.py  test_inflation.py  test_mode_detector.py  test_mode_events.py  test_nav_uncertainty.py  test_sealing.py  test_types.py  test_unstable_collections_linter.py
tests/estimation/: conftest.py  test_config.py  test_determinism.py  test_noisy_gt.py
tests/events/: test_adapters.py  test_bus.py  test_types.py
tests/examples/: test_replay_verification.py
tests/hal/: test_protocols.py
tests/integration/: test_closed_loop_smoke.py  test_closed_loop_smoke_with_recovery.py
tests/properties/: test_baud_property.py  test_cli_verify_properties.py  test_erur_property.py  test_erur_v2_property.py  test_fpb_property.py  test_fpb_v2_property.py  test_framework_invariants.py  test_md_property.py  test_python_tla_bridge.py  test_python_tla_bridge_full.py  test_rlb_property.py  test_verify_baud_smoke.py  test_verify_erur_smoke.py  test_verify_fpb_smoke.py  test_verify_md_smoke.py  test_verify_rlb_smoke.py
tests/state/: test_aggregator.py  test_messages.py  test_transforms.py
tests/telemetry/: test_actuation_adapter.py  test_adapters.py  test_calibrated_assessment_adapter.py  test_channels.py  test_decision_adapter.py  test_forward_prediction_adapter.py  test_fusion_result_adapter.py  test_in_memory_sink.py  test_integration.py  test_mcap_sink.py  test_prediction_outcome_adapter.py  test_replay.py  test_self_assessment_adapter.py  test_serialization.py
tests/traceability/: conftest.py  test_analysis.py  test_cli.py  test_determinism.py  test_integration.py  test_models.py  test_report.py
(+124 files in other folders)
