[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "project-ghost"
version = "0.0.1"
description = "Autonomous GPS-denied drone navigation: sim-first, hardware-eventual, vision-inertial."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Project Ghost contributors" }]
keywords = ["robotics", "drone", "uav", "slam", "vio", "simulation", "autonomy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
sim = [
    "pybullet>=3.2.6",
]
telemetry = [
    "mcap>=1.2.0",
    "mcap-protobuf-support>=0.5.0",
    "rerun-sdk>=0.21.0",
    "protobuf>=4.25,<6.0",
]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    "deptry>=0.20",
    "hypothesis>=6.112",
]

[project.urls]
Documentation = "https://github.com/project-ghost/project-ghost/tree/main/docs"
Source = "https://github.com/project-ghost/project-ghost"

[tool.hatch.build.targets.wheel]
packages = ["src/project_ghost"]

# --- ruff ---------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["protos/_generated"]

[tool.ruff.lint]
select = [
    "E", "W",       # pycodestyle
    "F",            # pyflakes
    "I",            # isort
    "N",            # pep8-naming
    "UP",           # pyupgrade
    "B",            # flake8-bugbear
    "C4",           # comprehensions
    "SIM",          # simplify
    "RUF",          # ruff
    "TCH",          # type-checking imports
    "PT",           # pytest style
    "ARG",          # unused arguments
    "PL",           # pylint subset
    "TRY",          # tryceratops
    "NPY",          # numpy
]
ignore = [
    "PLR0913",  # too many arguments (handled case by case)
    "TRY003",   # long message in exception (acceptable in libs)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101", "ARG"]
# Math conventions: covariance C, rotation R, process noise Q, etc.
# These come from the spec (docs/specs/uncertainty.md §5) and stay capitalized.
"src/project_ghost/core/uncertainty/**/*.py" = ["N803", "N806"]
"tests/core/**/*.py" = ["PLR2004", "S101", "ARG", "N803", "N806", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["project_ghost"]

# --- mypy ---------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_reexport = true
plugins = []
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
    "pybullet",
    "pybullet_data",
    "mcap.*",
    "mcap_protobuf.*",
    "rerun",
]
ignore_missing_imports = true

# --- pytest -------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
markers = [
    "slow: slow tests, excluded by default in pre-commit",
    "conformance: HAL conformance tests, parametrized per backend",
    "scenario: scenario-level tests requiring a simulator",
]

[tool.coverage.run]
source = ["src/project_ghost"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]

# --- deptry -------------------------------------------------------------
[tool.deptry]
known_first_party = ["project_ghost"]

# Phase 0 / T1: src/ is intentionally empty (docstrings only) so deptry sees
# every declared dependency as unused. Each entry below names a dependency
# that lands in src/ during a specific Phase 1 task; the entry must be
# removed when its module is implemented and actually imports the package.
# See docs/roadmaps/phase1.md for the task mapping.
[tool.deptry.per_rule_ignores]
DEP002 = [
    "protobuf",              # implicit via mcap-protobuf-support
    # numpy: usado por core.uncertainty (U1.a) — ya no exento
    "pybullet",              # T6: simulation.pybullet backend
    "mcap",                  # T4: telemetry.mcap_sink
    "mcap-protobuf-support", # T4: telemetry serialization
    "rerun-sdk",             # T4: telemetry.rerun_sink
    "ruff",                  # dev tool; never imported from src
    "mypy",                  # dev tool; never imported from src
    "pytest",                # used by tests/ (not scanned by deptry src)
    "pytest-cov",            # CI coverage tool
    "pre-commit",            # CI tool
    "deptry",                # CI tool, self-reflexive
    "hypothesis",            # used by tests/ property-based suite
]
