[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "project-ghost"
version = "0.2.2"
description = "Autonomy under uncertainty: closed-loop reference pipeline + 5 formal safety properties verifiable byte-exact from any MCAP + TLA+ mechanically-verified BAUD/ERUR/MD/partition over the abstract state space."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Project Ghost contributors" }]
keywords = [
    "robotics", "drone", "uav", "autonomy",
    "safety", "uncertainty", "calibration",
    "formal-properties", "verifiable-autonomy",
    "simulation", "mcap",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "numpy>=1.26,<3.0",
    # MCAP is the data format every CLI subcommand operates on;
    # making it optional would break ``ghost`` out of the box.
    "mcap>=1.2.0",
]

[project.optional-dependencies]
sim = [
    "pybullet>=3.2.6",
]
telemetry = [
    # `mcap` is now a base dependency. `telemetry` extra is reserved
    # for optional viewers like Rerun. Kept for backwards-compat with
    # ``pip install 'project-ghost[telemetry]'``.
    "rerun-sdk>=0.21.0",
]
app = [
    "streamlit>=1.35,<2.0",
    "pandas>=2.0,<3.0",
    "plotly>=5.18,<6.0",
]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    "deptry>=0.20",
    "hypothesis>=6.112",
]

[project.scripts]
ghost = "project_ghost.cli:main"
ghost-app = "project_ghost.app:run"

[project.urls]
Homepage      = "https://github.com/JFHelvetius/ghost"
Repository    = "https://github.com/JFHelvetius/ghost"
Documentation = "https://github.com/JFHelvetius/ghost/tree/main/docs"
Issues        = "https://github.com/JFHelvetius/ghost/issues"
Properties    = "https://github.com/JFHelvetius/ghost/tree/main/docs/adr#0031"

[tool.hatch.build.targets.wheel]
packages = ["src/project_ghost"]

# --- ruff ---------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["protos/_generated"]

[tool.ruff.lint]
select = [
    "E", "W",       # pycodestyle
    "F",            # pyflakes
    "I",            # isort
    "N",            # pep8-naming
    "UP",           # pyupgrade
    "B",            # flake8-bugbear
    "C4",           # comprehensions
    "SIM",          # simplify
    "RUF",          # ruff
    "TCH",          # type-checking imports
    "PT",           # pytest style
    "ARG",          # unused arguments
    "PL",           # pylint subset
    "TRY",          # tryceratops
    "NPY",          # numpy
]
ignore = [
    "PLR0913",  # too many arguments (handled case by case)
    "TRY003",   # long message in exception (acceptable in libs)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101", "ARG"]
# Math conventions: covariance C, rotation R, process noise Q, etc.
# These come from the spec (docs/specs/uncertainty.md §5) and stay capitalized.
"src/project_ghost/core/uncertainty/**/*.py" = ["N803", "N806"]
"tests/core/**/*.py" = ["PLR2004", "S101", "ARG", "N803", "N806", "RUF002", "RUF003"]
# state.transforms: nombres `R_body_to_world` / `R_world_to_body` vienen
# literales de docs/specs/state.md §6; R mayúscula es notación estándar
# para matriz de rotación.
"src/project_ghost/state/transforms.py" = ["N802", "N803", "N806"]
"tests/state/test_transforms.py" = ["N802", "N803", "N806", "PLR2004", "S101", "ARG"]
# telemetry tests use intra-function imports for type narrowing
# (e.g. importing FrozenInstanceError only in the test that asserts it),
# and Path is purely an annotation type.
"tests/telemetry/**/*.py" = ["PLR2004", "S101", "ARG", "PLC0415", "SIM117", "TC003"]
# analysis tests follow the same pattern: tmp_path fixtures use Path in
# annotations, helpers are imported from conftest, and ARG is benign in
# fixture parameter lists.
"tests/analysis/**/*.py" = ["PLR2004", "S101", "ARG", "PLC0415", "SIM117", "TC003"]
# traceability tests share the same pattern as analysis tests.
"tests/traceability/**/*.py" = ["PLR2004", "S101", "ARG", "PLC0415", "SIM117", "TC003"]
# estimation tests follow the same pattern as state/aggregator tests:
# array literals, numeric thresholds and helper fixtures with ARG-like
# parameters are intentional.
"tests/estimation/**/*.py" = ["PLR2004", "S101", "ARG", "PLC0415", "SIM117", "TC003"]
# properties tests follow the same pattern: Path is purely an annotation
# type, intra-function imports narrow scope for the BAUD safe-reason
# witness, and pytest.raises is the natural shape for parameter
# validation tests.
"tests/properties/**/*.py" = ["PLR2004", "S101", "ARG", "PLC0415", "SIM117", "TC003", "PT011"]
# app: Streamlit UI code uses magic values, lazy imports, Path annotations,
# and intentional non-ASCII characters in user-facing strings (em dashes
# in narrative text, σ in math labels, × in matrix shapes). The first
# four are idiomatic in the framework; the fifth is intentional
# typography.
"src/project_ghost/app/**/*.py" = ["PLR2004", "S101", "ARG", "PLC0415", "TC003", "TRY003", "TRY301", "RUF001"]
# Paper reproducibility scripts: capital M, K mirror the
# (min_outcomes, downgrade_threshold) math notation of ADRs 0031..0034
# and Theorem 1 (docs/paper/project_ghost_v0_2.md §6). The × in summary
# output is intentional Unicode matching the paper's table captions
# ("3 policies × 3 cycle counts").
"docs/paper/scripts/**/*.py" = ["N803", "N806", "RUF001", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["project_ghost"]

# --- mypy ---------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_reexport = true
plugins = []
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
    "pybullet",
    "pybullet_data",
    "mcap.*",
    "mcap_protobuf.*",
    "rerun",
    "streamlit",
    "streamlit.*",
    "pandas",
    "pandas.*",
    "plotly",
    "plotly.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# App code uses streamlit patterns (Any returns, lazy imports, widget
# magic values) that are impractical to annotate strictly.
module = ["project_ghost.app.*"]
disallow_any_generics = false
disallow_untyped_defs = false
warn_return_any = false

# --- pytest -------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
markers = [
    "slow: slow tests, excluded by default in pre-commit",
    "conformance: HAL conformance tests, parametrized per backend",
    "scenario: scenario-level tests requiring a simulator",
]

[tool.coverage.run]
source = ["src/project_ghost"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]

# --- deptry -------------------------------------------------------------
[tool.deptry]
known_first_party = ["project_ghost"]

# Phase 0 / T1: src/ is intentionally empty (docstrings only) so deptry sees
# every declared dependency as unused. Each entry below names a dependency
# that lands in src/ during a specific Phase 1 task; the entry must be
# removed when its module is implemented and actually imports the package.
# See docs/roadmaps/phase1.md for the task mapping.
[tool.deptry.per_rule_ignores]
DEP002 = [
    # numpy: usado por core.uncertainty (U1.a) — ya no exento
    # mcap: removido tras T4 — ahora se importa lazy desde telemetry.mcap_sink
    "pybullet",              # T6: simulation.pybullet backend
    "rerun-sdk",             # extra `telemetry`; sin integracion en repo (Rerun rechazado en T4)
    "ruff",                  # dev tool; never imported from src
    "mypy",                  # dev tool; never imported from src
    "pytest",                # used by tests/ (not scanned by deptry src)
    "pytest-cov",            # CI coverage tool
    "pre-commit",            # CI tool
    "deptry",                # CI tool, self-reflexive
    "hypothesis",            # used by tests/ property-based suite
]
